--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
      <script src="bower_components/underscore/underscore.js" charset="utf-8"></script>
      <script src="bower_components/backbone/backbone.js" charset="utf-8"></script>
      <script src="data.js" charset="utf-8"></script>
+     <script src="templates.js" charset="utf-8"></script>
      <script src="models.js" charset="utf-8"></script>
      <script src="collections.js" charset="utf-8"></script>
      <script src="main.js" charset="utf-8"></script>
