--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     <div class="container">
     </div>
 
-    <form class="createNewMovie" action="index.html" method="post">
-      <input type="text" name="image" value="" placeholder="Image">
-      <input type="text" name="title" value="" placeholder="Title">
-      <input type="text" name="storyline" value="" placeholder="Storyline">
-      <input type="button" name="submit" value="Submit" class="button">
-    </form>
+    <div class="createNewMovie">
+    </div>
 
      <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
      <script src="bower_components/underscore/underscore.js" charset="utf-8"></script>
@@ -24,6 +20,7 @@
      <script src="data.js" charset="utf-8"></script>
      <script src="templates.js" charset="utf-8"></script>
      <script src="models.js" charset="utf-8"></script>
+     <script src="views.js" charset="utf-8"></script>
      <script src="collections.js" charset="utf-8"></script>
      <script src="main.js" charset="utf-8"></script>
   </body>
